--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ gunicorn==19.6.0
 itsdangerous==0.24
 Jinja2==2.9.3
 MarkupSafe==0.23
+pkg-resources==0.0.0
 psycopg2==2.6.1
 py-bcrypt==0.4
 python-http-client==2.2.1
